--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,38 +1,25 @@
 # SPDX-License-Identifier: MIT
 
-include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
-add_executable(terrain2png terrain2png.cc)
-add_dependencies(terrain2png block_colors_data)
-target_link_libraries(terrain2png PRIVATE
+set(PIXEL_TERRAIN_SRCS
+  pixel-terrain.cc
+  block-server.cc
+  dump-nbt.cc
+  generate-image.cc
+  nbt-to-xml.cc)
+
+add_executable(pixel-terrain ${PIXEL_TERRAIN_SRCS})
+add_dependencies(pixel-terrain
+  block_colors_data)
+target_link_libraries(pixel-terrain PRIVATE
   mcregion
   logger
   pixtimage
-  ${REGETOPT_MOD_NAME})
-install(TARGETS terrain2png DESTINATION bin)
-
-add_executable(blockd blockd.cc)
-target_include_directories(blockd PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(blockd PRIVATE
-  mcregion
-  logger
   pixtserver
-  ${REGETOPT_MOD_NAME})
-install(TARGETS blockd DESTINATION bin)
-
-add_executable(nbt2xml nbt2xml.cc)
-target_include_directories(nbt2xml PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(nbt2xml PRIVATE
   nbtpullparser
   ${REGETOPT_MOD_NAME})
-install(TARGETS nbt2xml DESTINATION bin)
-
-add_executable(dumpnbt dumpnbt.cc)
-target_include_directories(dumpnbt PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(dumpnbt PRIVATE
-  mcregion
-  ${REGETOPT_MOD_NAME})
-install(TARGETS dumpnbt DESTINATION bin)
+install(TARGETS pixel-terrain DESTINATION bin)
 
 add_subdirectory(graphics)
 add_subdirectory(image)
