Rewrite threded worker

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,4 +31,5 @@ add_subdirectory(image)
 add_subdirectory(nbt)
 add_subdirectory(server)
 add_subdirectory(logger)
+add_subdirectory(utils)
 add_subdirectory(worlds)
