Rework image generator

--- a/src/logger/CMakeLists.txt
+++ b/src/logger/CMakeLists.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: MIT
 
-set(LOGGER_SRCS logger.cc pretty_printer.cc)
+set(LOGGER_SRCS logger.cc)
 add_library(logger STATIC ${LOGGER_SRCS})
