--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,12 @@ else()
 endif()
 set(REGETOPT_MOD_NAME regetopt_static)
 
+if(MSVC)
+  set(OS_WIN Yes)
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+  set(OS_LINUX Yes)
+endif()
+
 include(cmake/test_utils.cmake)
 
 add_subdirectory(block)
@@ -38,6 +44,12 @@ add_custom_target(generate_editor_aux DEPENDS
   ${PROJECT_SOURCE_DIR}/compile_flags.txt
   ${PROJECT_SOURCE_DIR}/src/.dir-locals.el)
 
+if(OS_LINUX)
+  set(EDITOR_PLATFORM "Linux")
+elseif(OS_WIN)
+  set(EDITOR_PLATFORM "Windows")
+endif()
+
 get_target_property(ZLIB_INCLUDE_DIRS ${ZLIB_MOD_NAME} INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(PNG_INCLUDE_DIRS ${PNG_MOD_NAME} INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(REGETOPT_INCLUDE_DIRS regetopt INTERFACE_INCLUDE_DIRECTORIES)
@@ -46,14 +58,23 @@ unset(REGETOPT_INCLUDE_DIRS)
 unset(PNG_INCLUDE_DIRS)
 unset(ZLIB_INCLUDE_DIRS)
 add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/compile_flags.txt
-  COMMAND tools/editor-aux/editor-aux compile_flags.txt ${PROJECT_SOURCE_DIR}/compile_flags.txt ${COMP_INCLUDE_DIRS}
-  DEPENDS editor-aux
   COMMENT "Generating compile_flags.txt"
-  VERBATIM)
-add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/src/.dir-locals.el
-  COMMAND  tools/editor-aux/editor-aux .dir-locals.el ${PROJECT_SOURCE_DIR}/src/.dir-locals.el ${COMP_INCLUDE_DIRS}
+  COMMAND tools/editor-aux/editor-aux
+  ${EDITOR_PLATFORM}
+  compile_flags.txt
+  ${PROJECT_SOURCE_DIR}/compile_flags.txt
+  ${COMP_INCLUDE_DIRS}
   DEPENDS editor-aux
+  VERBATIM)
+
+add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/src/.dir-locals.el
   COMMENT "Generating src/.dir-locals.el"
+  COMMAND tools/editor-aux/editor-aux
+  ${EDITOR_PLATFORM}
+  .dir-locals.el
+  ${PROJECT_SOURCE_DIR}/src/.dir-locals.el
+  ${COMP_INCLUDE_DIRS}
+  DEPENDS editor-aux
   VERBATIM)
 unset(COMP_INCLUDE_DIRS)
 
