--- a/src/worlds/CMakeLists.txt
+++ b/src/worlds/CMakeLists.txt
@@ -1,4 +1,8 @@
 # SPDX-License-Identifier: MIT
 
 add_library(worlds STATIC worlds.cc)
-target_link_libraries(worlds PRIVATE nbtpullparser)
+if(USE_V3_NBT_PARSER)
+  target_link_libraries(worlds PRIVATE mcregion)
+else()
+  target_link_libraries(worlds PRIVATE nbtpullparser)
+endif()
