Enable address and leak sanitizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,13 +67,9 @@ function(add_boost_test target_name test_name)
   add_test(NAME ${test_name} COMMAND ${target_name})
 endfunction()
 
-add_subdirectory(block)
-add_subdirectory(tools)
-add_subdirectory(src)
-
-if(${CMAKE_BUILD_TYPE} MATCHES Debug AND NOT MSVC)
-  add_compile_options(-fsanitize=address -fsanitize=leak)
-  add_link_options(-fsanitize=address -fsanitize=leak)
+if(${CMAKE_BUILD_TYPE} MATCHES [Dd][Ee][Bb][Uu][Gg] AND NOT MSVC)
+  add_compile_options(-fsanitize=address,leak)
+  add_link_options(-fsanitize=address,leak)
 endif()
 
 configure_file(src/config.h.in ${CMAKE_BINARY_DIR}/config.h)
@@ -85,3 +81,7 @@ endif()
 if(UNIX)
   install(FILES LICENSE DESTINATION share/licenses/pixel-terrain)
 endif()
+
+add_subdirectory(block)
+add_subdirectory(tools)
+add_subdirectory(src)
