--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -5,7 +5,7 @@ set(GRAPHICS_SRC
   png.cc)
 
 add_library(graphics STATIC ${GRAPHICS_SRC})
-target_include_directories(graphics PRIVATE SYSTEM ${PNG_INCLUE_DIRS})
+target_include_directories(graphics PUBLIC SYSTEM ${PNG_INCLUDE_DIRS})
 target_link_libraries(graphics PUBLIC ${PNG_MOD_NAME})
 
 add_boost_test(color_test imagegen_color color_test.cc)
