--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -6,7 +6,7 @@ set(GRAPHICS_SRC
 
 add_library(graphics STATIC ${GRAPHICS_SRC})
 target_include_directories(graphics PUBLIC SYSTEM ${PNG_INCLUDE_DIRS})
-target_link_libraries(graphics PUBLIC ${PNG_MOD_NAME})
+target_link_libraries(graphics PUBLIC PNG::PNG)
 
 add_boost_test(color_test imagegen_color color_test.cc)
 if(TARGET color_test)
