Change default values for some feature flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,8 @@ if(HAVE_VA_OPT)
 endif()
 
 include(PTFeatureFlags)
-define_feature_flag(USE_V3_NBT_PARSER "Use experimental NBT parser" OFF)
-define_feature_flag(USE_BLOCK_LIGHT_DATA "Use block light data in save data" OFF)
+define_feature_flag(USE_V3_NBT_PARSER "Use experimental NBT parser" ON)
+define_feature_flag(USE_BLOCK_LIGHT_DATA "Use block light data in save data" ON)
 
 option(BUILD_TESTS "Enable testing")
 if(BUILD_TESTS)
