--- a/src/config.h.in
+++ b/src/config.h.in
@@ -3,10 +3,8 @@
 #ifndef PIXEL_TERRAIN_CONFIG_H
 #define PIXEL_TERRAIN_CONFIG_H
 
-#define PRODUCT_NAME "@CMAKE_PROJECT_NAME@"
+#define PRODUCT_NAME "@project_name@"
 
-#define VERSION_MAJOR @PROJECT_VERSION_MAJOR@
-#define VERSION_MINOR @PROJECT_VERSION_MINOR@
-#define VERSION_REVISION @PROJECT_VERSION_PATCH@
+#define VERSION_STR "@version@"
 
 #endif
